syntax = "proto3";
package crossdomain.cdac;

import "gogoproto/gogo.proto";
import "cdac/params.proto";
import "cdac/public_key.proto";
import "cdac/validity.proto";
import "cdac/certificate.proto";
import "cdac/ibc_connection.proto";
import "cdac/domain.proto";
import "cdac/authentication_log.proto";
import "cdac/domain_cooperation.proto";
import "cdac/cooperation_log.proto";
import "cdac/forward_policy.proto";
import "cdac/domain_map.proto";
import "cdac/cooperation_network_features.proto";
import "cdac/cooperation_data.proto";
import "cdac/cooperation_network.proto";
import "cdac/update_policy.proto";
import "cdac/cooperative_domain.proto";
import "cdac/delegation_path.proto";
import "cdac/path.proto";
import "cdac/time_calculation.proto";
import "cdac/calculation_time.proto";
import "cdac/inter_domain_acl_policy.proto";
import "cdac/inter_domain_dcl_policy.proto";
import "cdac/delegation_conditions.proto";
import "cdac/delegation_rule.proto";
import "cdac/delegation_policy_target.proto";
import "cdac/delegation_policy.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "crossdomain/x/cdac/types";

// GenesisState defines the cdac module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  repeated PublicKey publicKeyList = 3 [(gogoproto.nullable) = false];
  uint64 publicKeyCount = 4;
  repeated Validity validityList = 5 [(gogoproto.nullable) = false];
  uint64 validityCount = 6;
  repeated Certificate certificateList = 7 [(gogoproto.nullable) = false];
  uint64 certificateCount = 8;
  repeated IbcConnection ibcConnectionList = 9 [(gogoproto.nullable) = false];
  uint64 ibcConnectionCount = 10;
  repeated Domain domainList = 11 [(gogoproto.nullable) = false];
  uint64 domainCount = 12;
  repeated AuthenticationLog authenticationLogList = 13 [(gogoproto.nullable) = false];
  uint64 authenticationLogCount = 14;
  repeated DomainCooperation domainCooperationList = 15 [(gogoproto.nullable) = false];
  uint64 domainCooperationCount = 16;
  repeated CooperationLog cooperationLogList = 17 [(gogoproto.nullable) = false];
  uint64 cooperationLogCount = 18;
  repeated ForwardPolicy forwardPolicyList = 19 [(gogoproto.nullable) = false];
  uint64 forwardPolicyCount = 20;
  repeated DomainMap domainMapList = 21 [(gogoproto.nullable) = false];
  repeated CooperationNetworkFeatures cooperationNetworkFeaturesList = 22 [(gogoproto.nullable) = false];
  uint64 cooperationNetworkFeaturesCount = 23;
  repeated CooperationData cooperationDataList = 24 [(gogoproto.nullable) = false];
  repeated CooperationNetwork cooperationNetworkList = 25 [(gogoproto.nullable) = false];
  uint64 cooperationNetworkCount = 26;
  UpdatePolicy updatePolicy = 27;
  repeated CooperativeDomain cooperativeDomainList = 28 [(gogoproto.nullable) = false];
  uint64 cooperativeDomainCount = 29;
  repeated DelegationPath delegationPathList = 30 [(gogoproto.nullable) = false];
  uint64 delegationPathCount = 31;
  repeated Path pathList = 32 [(gogoproto.nullable) = false];
  uint64 pathCount = 33;
  repeated TimeCalculation timeCalculationList = 34 [(gogoproto.nullable) = false];
  uint64 timeCalculationCount = 35;
  repeated CalculationTime calculationTimeList = 36 [(gogoproto.nullable) = false];
  uint64 calculationTimeCount = 37;
  repeated InterDomainAclPolicy interDomainAclPolicyList = 38 [(gogoproto.nullable) = false];
  uint64 interDomainAclPolicyCount = 39;
  repeated InterDomainDclPolicy interDomainDclPolicyList = 40 [(gogoproto.nullable) = false];
  uint64 interDomainDclPolicyCount = 41;
  repeated DelegationConditions delegationConditionsList = 42 [(gogoproto.nullable) = false];
  uint64 delegationConditionsCount = 43;
  repeated DelegationRule delegationRuleList = 44 [(gogoproto.nullable) = false];
  uint64 delegationRuleCount = 45;
  repeated DelegationPolicyTarget delegationPolicyTargetList = 46 [(gogoproto.nullable) = false];
  uint64 delegationPolicyTargetCount = 47;
  repeated DelegationPolicy delegationPolicyList = 48 [(gogoproto.nullable) = false];
  uint64 delegationPolicyCount = 49;
  // this line is used by starport scaffolding # genesis/proto/state
}
