syntax = "proto3";
package crossdomain.cdac;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cdac/params.proto";
import "cdac/public_key.proto";
import "cdac/validity.proto";
import "cdac/certificate.proto";
import "cdac/ibc_connection.proto";
import "cdac/domain.proto";
import "cdac/authentication_log.proto";
import "cdac/cooperation_log.proto";
// this line is used by starport scaffolding # 1
import "cdac/forward_policy.proto";
import "cdac/domain_cooperation.proto";

option go_package = "crossdomain/x/cdac/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crossdomain/cdac/params";
  }
  // Queries a PublicKey by id.
	rpc PublicKey(QueryGetPublicKeyRequest) returns (QueryGetPublicKeyResponse) {
		option (google.api.http).get = "/crossdomain/cdac/public_key/{id}";
	}

	// Queries a list of PublicKey items.
	rpc PublicKeyAll(QueryAllPublicKeyRequest) returns (QueryAllPublicKeyResponse) {
		option (google.api.http).get = "/crossdomain/cdac/public_key";
	}

// Queries a Validity by id.
	rpc Validity(QueryGetValidityRequest) returns (QueryGetValidityResponse) {
		option (google.api.http).get = "/crossdomain/cdac/validity/{id}";
	}

	// Queries a list of Validity items.
	rpc ValidityAll(QueryAllValidityRequest) returns (QueryAllValidityResponse) {
		option (google.api.http).get = "/crossdomain/cdac/validity";
	}

// Queries a Certificate by id.
	rpc Certificate(QueryGetCertificateRequest) returns (QueryGetCertificateResponse) {
		option (google.api.http).get = "/crossdomain/cdac/certificate/{id}";
	}

	// Queries a list of Certificate items.
	rpc CertificateAll(QueryAllCertificateRequest) returns (QueryAllCertificateResponse) {
		option (google.api.http).get = "/crossdomain/cdac/certificate";
	}

// Queries a IbcConnection by id.
	rpc IbcConnection(QueryGetIbcConnectionRequest) returns (QueryGetIbcConnectionResponse) {
		option (google.api.http).get = "/crossdomain/cdac/ibc_connection/{id}";
	}

	// Queries a list of IbcConnection items.
	rpc IbcConnectionAll(QueryAllIbcConnectionRequest) returns (QueryAllIbcConnectionResponse) {
		option (google.api.http).get = "/crossdomain/cdac/ibc_connection";
	}

// Queries a Domain by id.
	rpc Domain(QueryGetDomainRequest) returns (QueryGetDomainResponse) {
		option (google.api.http).get = "/crossdomain/cdac/domain/{id}";
	}

	// Queries a list of Domain items.
	rpc DomainAll(QueryAllDomainRequest) returns (QueryAllDomainResponse) {
		option (google.api.http).get = "/crossdomain/cdac/domain";
	}

// Queries a AuthenticationLog by id.
	rpc AuthenticationLog(QueryGetAuthenticationLogRequest) returns (QueryGetAuthenticationLogResponse) {
		option (google.api.http).get = "/crossdomain/cdac/authentication_log/{id}";
	}

	// Queries a list of AuthenticationLog items.
	rpc AuthenticationLogAll(QueryAllAuthenticationLogRequest) returns (QueryAllAuthenticationLogResponse) {
		option (google.api.http).get = "/crossdomain/cdac/authentication_log";
	}

// Queries a DomainCooperation by id.
	rpc DomainCooperation(QueryGetDomainCooperationRequest) returns (QueryGetDomainCooperationResponse) {
		option (google.api.http).get = "/crossdomain/cdac/domain_cooperation/{id}";
	}

	// Queries a list of DomainCooperation items.
	rpc DomainCooperationAll(QueryAllDomainCooperationRequest) returns (QueryAllDomainCooperationResponse) {
		option (google.api.http).get = "/crossdomain/cdac/domain_cooperation";
	}

// Queries a CooperationLog by id.
	rpc CooperationLog(QueryGetCooperationLogRequest) returns (QueryGetCooperationLogResponse) {
		option (google.api.http).get = "/crossdomain/cdac/cooperation_log/{id}";
	}

	// Queries a list of CooperationLog items.
	rpc CooperationLogAll(QueryAllCooperationLogRequest) returns (QueryAllCooperationLogResponse) {
		option (google.api.http).get = "/crossdomain/cdac/cooperation_log";
	}

// Queries a list of CheckEstablishedCooperationByChannel items.
	rpc CheckEstablishedCooperationByChannel(QueryCheckEstablishedCooperationByChannelRequest) returns (QueryCheckEstablishedCooperationByChannelResponse) {
		option (google.api.http).get = "/crossdomain/cdac/check_established_cooperation_by_channel/{channel}";
	}

// Queries a list of EstablishedCooperationByChannel items.
	rpc EstablishedCooperationByChannel(QueryEstablishedCooperationByChannelRequest) returns (QueryEstablishedCooperationByChannelResponse) {
		option (google.api.http).get = "/crossdomain/cdac/established_cooperation_by_channel/{channel}";
	}

// Queries a ForwardPolicy by id.
	rpc ForwardPolicy(QueryGetForwardPolicyRequest) returns (QueryGetForwardPolicyResponse) {
		option (google.api.http).get = "/crossdomain/cdac/forward_policy/{id}";
	}

	// Queries a list of ForwardPolicy items.
	rpc ForwardPolicyAll(QueryAllForwardPolicyRequest) returns (QueryAllForwardPolicyResponse) {
		option (google.api.http).get = "/crossdomain/cdac/forward_policy";
	}

// Queries a list of RetrieveForwardPolicy items.
	rpc RetrieveForwardPolicy(QueryRetrieveForwardPolicyRequest) returns (QueryRetrieveForwardPolicyResponse) {
		option (google.api.http).get = "/crossdomain/cdac/retrieve_forward_policy";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetPublicKeyRequest {
	uint64 id = 1;
}

message QueryGetPublicKeyResponse {
	PublicKey PublicKey = 1 [(gogoproto.nullable) = false];
}

message QueryAllPublicKeyRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPublicKeyResponse {
	repeated PublicKey PublicKey = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetValidityRequest {
	uint64 id = 1;
}

message QueryGetValidityResponse {
	Validity Validity = 1 [(gogoproto.nullable) = false];
}

message QueryAllValidityRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllValidityResponse {
	repeated Validity Validity = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetCertificateRequest {
	uint64 id = 1;
}

message QueryGetCertificateResponse {
	Certificate Certificate = 1 [(gogoproto.nullable) = false];
}

message QueryAllCertificateRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCertificateResponse {
	repeated Certificate Certificate = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetIbcConnectionRequest {
	uint64 id = 1;
}

message QueryGetIbcConnectionResponse {
	IbcConnection IbcConnection = 1 [(gogoproto.nullable) = false];
}

message QueryAllIbcConnectionRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllIbcConnectionResponse {
	repeated IbcConnection IbcConnection = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetDomainRequest {
	uint64 id = 1;
}

message QueryGetDomainResponse {
	Domain Domain = 1 [(gogoproto.nullable) = false];
}

message QueryAllDomainRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDomainResponse {
	repeated Domain Domain = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetAuthenticationLogRequest {
	uint64 id = 1;
}

message QueryGetAuthenticationLogResponse {
	AuthenticationLog AuthenticationLog = 1 [(gogoproto.nullable) = false];
}

message QueryAllAuthenticationLogRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAuthenticationLogResponse {
	repeated AuthenticationLog AuthenticationLog = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetDomainCooperationRequest {
	uint64 id = 1;
}

message QueryGetDomainCooperationResponse {
	DomainCooperation DomainCooperation = 1 [(gogoproto.nullable) = false];
}

message QueryAllDomainCooperationRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDomainCooperationResponse {
	repeated DomainCooperation DomainCooperation = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetCooperationLogRequest {
	uint64 id = 1;
}

message QueryGetCooperationLogResponse {
	CooperationLog CooperationLog = 1 [(gogoproto.nullable) = false];
}

message QueryAllCooperationLogRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCooperationLogResponse {
	repeated CooperationLog CooperationLog = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryCheckEstablishedCooperationByChannelRequest {
  string channel = 1;
}

message QueryCheckEstablishedCooperationByChannelResponse {
  string label = 1;
  bool found = 2;
}

message QueryEstablishedCooperationByChannelRequest {
  string channel = 1;
}

message QueryEstablishedCooperationByChannelResponse {
  DomainCooperation domainCooperation = 1;
  bool found = 2;
}

message QueryGetForwardPolicyRequest {
	uint64 id = 1;
}

message QueryGetForwardPolicyResponse {
	ForwardPolicy ForwardPolicy = 1 [(gogoproto.nullable) = false];
}

message QueryAllForwardPolicyRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllForwardPolicyResponse {
	repeated ForwardPolicy ForwardPolicy = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryRetrieveForwardPolicyRequest {
}

message QueryRetrieveForwardPolicyResponse {
  ForwardPolicy forwardPolicy = 1;
}

// this line is used by starport scaffolding # 3
